src/main.css
@import "reset.css";

body {
  font-family: "Helvetica Neue", sans-serif;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.card-slot {
  position: relative;
  padding: 1.5rem;
  width: 25rem;
  height: 32rem;
  margin-bottom: 1rem; /* address bottom: -1rem on counter */
  overflow: hidden;
}

.card-slot__counter {
  display: block;
  height: 100px;
  background: white;
  position: absolute;
  bottom: -1rem;
  left: 0;
  right: 0;
  border-radius: 0.7rem;
  box-shadow: 0px -3px 1px rgba(0, 0, 0, 0.05);
  text-align: center;
  padding: 1rem;
  color: #999;
}

.card {
  padding: 2em;
  height: 100%;
  width: 100%;
  color: white;
  background: black;
  border-radius: 1rem;
  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.5);
  transform: translateY(0);
  transition: translate 500ms;
}

.card__question {
  font-size: 2.2em;
  line-height: 1.3em;
  font-weight: bold;
  margin-bottom: 1em;
}

.card__rules {
  padding: 0;
  list-style-position: inside;
}

.card__link {
  color: white;
}

.card--enter-start {
  transform: translateY(100%);
}

.card--enter-end {
  transform: translateY(0);
}

.card--enter {
  transition: all 300ms;
}

.card--leave-start {
  transform: translateY(0);
}

.card--leave-end {
  transform: translateY(100%);
}

.card--leave {
  transition: all 200ms;
}

nav {
  display: flex;
  align-items: center;
}

.btn {
  background: white;
  border: none;
  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
  border-radius: 100%;
  width: 5rem;
  height: 5rem;
  font-size: 3rem;
  margin: 0 1rem;
  transition: transform 100ms;
  cursor: pointer;
}

.btn:hover {
  transition: transform 200ms;
  transform: scale(1.2);
}

.btn:active {
  transition: transform 100ms;
  transform: scale(1.1);
}

.credits {
  font-size: 0.7rem;
  position: absolute;
  bottom: 1em;
  right: 1em;
}

.credits__logo {
  display: inline-block;
  vertical-align: middle;
  margin: 0 0.2rem;
}

